--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+<h1> This is our blog </h1>
+<p> This is our first paragraph </p>
+
 </body>
 </html>
