--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Adventures of a Woman in Science</title>
-</head>
-<body>
-<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-<h1> This is our blog </h1>
+	<head>
+  		<title>Females in Science Blog</title>
+  		<link href="index.css" rel="stylesheet">
+  		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+
+	</head>
+	<body>
+		<h1> Females in Science Blog </h1>
 <p> This is our first paragraph </p>
 
-</body>
+	</body>
 </html>
