--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1> Females in Science Blog </h1>
-<p> This is our first paragraph </p>
+<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 
 	</body>
 </html>
