--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 
 	</head>
 	<body>
-		<h1> Females in Science Blog </h1>
+<h1> Females in Science Blog </h1>
 <p> This is our first paragraph </p>
+<ul>
+	<li> Link 1 </li>
+	<li> Link 2 </li>
+	<li> Link 3 </li>
+	<li> Link 4 </li>
+</ul>
 
 	</body>
 </html>
