--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   		<title>Females in Science Blog</title>
   		<link href="index.css" rel="stylesheet">
   		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  		<script src="jquery.min.js"></script>
 	</head>
 	<body>
 <h1> Females in Science Blog </h1>
@@ -14,7 +15,9 @@
 	<li> Link 3 </li>
 	<li> Link 4 </li>
 </ul>
-		<h1> Females in Science Blog </h1>
+		<h2> Beth's Story </h2>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
+
+		<h2> Emma's Story </h2>
 	</body>
 </html>
