--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-  		<title>Females in Science Blog</title>
-  		<link href="index.css" rel="stylesheet">
-  		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+	<title>Females in Science</title>
+		 <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</head>
 	<body>
+
+	<div class="container>"
 <h1> Females in Science Blog </h1>
-<p> This is our first paragraph </p>
+<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
 	<li> Link 1 </li>
 	<li> Link 2 </li>
@@ -15,6 +20,5 @@
 	<li> Link 4 </li>
 	<h2>Females in Science Blog</h2>
 </ul>
-<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 	</body>
 </html>
