--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <h1> Females in Science Blog </h1>
 <p> This is our first paragraph </p>
 <ul>
-	<li> Link 1 </li>
-	<li> Link 2 </li>
-	<li> Link 3 </li>
-	<li> Link 4 </li>
+	<button onclick="document.write(5+6)"><li> Link 1 </li></button>
+	<button onclick="document.write(5+6)"><li> Link 2 </li></button>
+	<button onclick="document.write(5+6)"><li> Link 3 </li></button>
+	<button onclick="document.write(5+6)"><li> Link 4 </li></button>
 </ul>
 		<h2> Beth's Story </h2>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 
 		<h2> Emma's Story </h2>
+<p> Neuroscience undergraduate learning how to make a website! </p>
 	</body>
 </html>
