--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 
 	</head>
 	<body>
-
-	<div class="container>"
+	<div class="container>"></div>
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
 	<button onclick="document.write(5+6)"><li> Link 1 </li></button>
-	<button onclick="document.write(5+6)"><li> Link 2 </li></button>
+	<button onclick="document.write(5+6)"><li> Blogs </li></button>
 	<button onclick="document.write(5+6)"><li> Link 3 </li></button>
 	<button onclick="document.write(5+6)"><li> Link 4 </li></button>
 	</ul>
 	<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 
+	<button onclick="document.write()"><li> Link 4 </li></button>
+</ul>
 		<h2> Beth's Story </h2>
 <p> Aa a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of sciences. 
 
