--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 		 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 	</head>
 	<body>
-
-	<div class="container>"
+	<div> class="container"</div>
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
