--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
-	<button onclick="document.write(5+6)"><li> Link 1 </li></button>
+	<button onclick="document.write(5+6)"><li> Inspirational Women </li></button>
 	<button onclick="document.write(5+6)"><li> Blogs </li></button>
-	<button onclick="document.write(5+6)"><li> Link 3 </li></button>
-	<button onclick="document.write(5+6)"><li> Link 4 </li></button>
+	<button onclick="document.write(5+6)"><li> Support Available </li></button>
+	<button onclick="document.write(5+6)"><li> Get In Touch </li></button>
 	</ul>
 	<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 
