--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="index.css" rel="stylesheet">
   		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"
   		<script src="jquery.min.js"></script>
+  		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 		 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -16,19 +17,19 @@
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
-	<button onclick="document.write(5+6)"><li> Link 1 </li></button>
+	<button onclick="document.write(5+6)"><li> Home </li></button>
 	<button onclick="document.write(5+6)"><li> Blogs </li></button>
 	<button onclick="document.write(5+6)"><li> Link 3 </li></button>
 	<button onclick="document.write(5+6)"><li> Link 4 </li></button>
 	</ul>
-	<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
-
-	<button onclick="document.write()"><li> Link 4 </li></button>
-</ul>
+<div>
 		<h2> Beth's Story </h2>
-<p> Aa a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of sciences. 
-
+<p> As a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of sciences. 
+</p>
+</div>
+<div>
 		<h2> Emma's Story </h2>
 <p> Neuroscience undergraduate learning how to make a website! </p>
+</div>
 	</body>
 </html>
