--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 		 <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	</head>
 	<body>
-	<div> class="container"</div>
+	<div class="nav">
+      <div class="container">
+     
+      </div>
+    </div>
+
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
@@ -20,7 +26,7 @@
 	<button onclick="document.write(5+6)"><li> Support Available </li></button>
 	<button onclick="document.write(5+6)"><li> Get In Touch </li></button>
 	</ul>
-	<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
+	
 </ul>
 		<h2> Beth's Story </h2>
 <p> Aa a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of sciences. 
