--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 </script>
 	</head>
 	<body>
->>>>>>> origin/master
 <h1> Females in Science Blog </h1>
 <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
@@ -41,10 +40,9 @@
 	</ul>
 <div>
 	<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
->>>>>>> origin/master
 </ul>
 		<h2> Beth's Story </h2>
-<p> As a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of sciences. 
+<p> As a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of unknown. This page was designed to test both our brand new coding skills (help us!) as well as give some women out there a little help up into the glorious land of science.  
 </p>
 </div>
 <div>
