--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
      
       </div>
     </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+        <img class="first-slide" src="Header_background.jpg" alt="Element Photo" width="800">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Females in Science Blog.</h1>
+             <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,10 +57,8 @@
  
 	</head>
 	<body>
-<img src="Header_background.jpg" alt="Element Photo" style="width:cover">
 
 <h1> Females in Science Blog </h1>
-<p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
 <ul>
 	<button onclick="document.write(5+6)"><li> Home </li></button>
 	<button onclick="document.write(5+6)"><li> Inspirational Women </li></button>
