--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 </p>
 </div>
 <div>
+<img src="image.jpg" alt="Emma" style="width:304px;height:228px;">
+
 		<h2> Emma's Story </h2>
 <p> Neuroscience undergraduate learning how to make a website! </p>
 </div>
