--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
             <div class="carousel-caption">
               <h1>Females in Science Blog.</h1>
              <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">Join Our Mailing List</a></p>
+            </div>
+          </div>
+        </div>
+<div class="item">
+          <img class="second-slide" src="famous_women_in_science" alt="Inspirational women">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Famous Women in Science.</h1>
+              <p>Find out the stories of some of most famous women in science.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -58,7 +68,7 @@
 	</head>
 	<body>
 
-<h1> Females in Science Blog </h1>
+
 <ul>
 	<button onclick="document.write(5+6)"><li> Home </li></button>
 	<button onclick="document.write(5+6)"><li> Inspirational Women </li></button>
@@ -66,12 +76,13 @@
 	<button onclick="document.write(5+6)"><li> Support </li></button>
 	<button onclick="document.write(5+6)"><li> Get In Touch </li></button>
 	</ul>
+<img src="edited_beth.jpg" alt="Beth" style="width:304px;">
 		<h2> Beth's Story </h2>
 <p> As a second year PhD student I have studied science scince I was 8 years old. At the grand age of 23 it's been a long and wonderful journey into the world of unknown. This page was designed to test both our brand new coding skills (help us!) as well as give some women out there a little help up into the glorious land of science.  
 </p>
 </div>
 <div>
-<img src="image.jpg" alt="Emma" style="width:304px;height:228px;">
+<img src="image.jpg" alt="Emma" style="width:304px;">
 
 		<h2> Emma's Story </h2>
 <p> Neuroscience undergraduate learning how to make a website! </p>
