--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+<link href="carousel.css" rel="stylesheet">
 	</head>
 	<body>
+
 	<div class="nav">
       <div class="container">
-     
       </div>
     </div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -35,12 +35,12 @@
             </div>
           </div>
         </div>
-<div class="item">
-          <img class="second-slide" src="famous_women_in_science" alt="Inspirational women">
+        <div class="item">
+          <img class="second-slide" src="famous_women_in_science.jpg" alt="Inspirational Women" width="800">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Famous Women in Science.</h1>
-              <p>Find out the stories of some of most famous women in science.</p>
+              <h1>Inspirational Women.</h1>
+              <p>Learn about some of the most inspirational women in science.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -53,6 +53,7 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+    </div>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
