--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Females in Science Blog</title>
+	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
 	<link href="Index.css" rel="stylesheet">
   		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"
   		<script src="jquery.min.js"></script>
@@ -31,29 +36,23 @@
             <div class="carousel-caption">
               <h1>Females in Science Blog.</h1>
              <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">Join Our Mailing List</a></p>
+             <form action="action_page.php" method="post">
+ <p> Join Our Mailing List</p>
+ <a><form action="action_page.php">
+  Name:<br>
+  <input type="text" name="firstname" value="">
+  <br>
+  E-mail Address:<br>
+  <input type="text" name="lastname" value="">
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
+</a>
+            ></p>
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="second-slide" src="famous_women_in_science.jpg" alt="Inspirational Women" width="800">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Inspirational Women.</h1>
-              <p>Learn about some of the most inspirational women in science.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+        
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -97,5 +96,20 @@
   ga('create', 'UA-87385235-1', 'auto');
   ga('send', 'pageview');
 </script>
+	<div class="item">
+          <img class="second-slide" src="famous_women_in_science.jpg" alt="Inspirational Women" width="800">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Inspirational Women.</h1>
+              <p>Learn about some of the most inspirational women in science.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+       
+    </div>
+
+
+
 	</body>
 </html>
