--- a/index.html
+++ b/index.html
@@ -37,17 +37,7 @@
               <h1>Females in Science Blog.</h1>
              <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
              <form action="action_page.php" method="post">
- <p> Join Our Mailing List</p>
- <a><form action="action_page.php">
-  Name:<br>
-  <input type="text" name="firstname" value="">
-  <br>
-  E-mail Address:<br>
-  <input type="text" name="lastname" value="">
-  <br><br>
-  <input type="submit" value="Submit">
-</form>
-</a>
+ 
             ></p>
             </div>
           </div>
@@ -85,7 +75,7 @@
 <img src="image.jpg" alt="Emma" style="width:304px;">
 
 		<h2> Emma's Story </h2>
-<p> Neuroscience undergraduate learning how to make a website! </p>
+<p> Hey I am a Neuroscience undergraduate in my final year! As a field, Neuroscience is in its infancy and there is so much to discover.. I'm really keen to get more people, *ahemm particularly ladies* involved in this subject so that we can help to understand how people learn, think and function! Hope you like our first website!  </p>
 </div>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -108,7 +98,23 @@
         </div>
        
     </div>
-
+<p><centre>*******</centre></p>
+<p> Please get in contact if you want to be featured on our blog!</p>
+<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+	<div class="row">
+		<label for="name">Your name:</label><br />
+		<input id="name" class="input" name="name" type="text" value="" size="30" /><br />
+	</div>
+	<div class="row">
+		<label for="email">Your email:</label><br />
+		<input id="email" class="input" name="email" type="text" value="" size="30" /><br />
+	</div>
+	<div class="row">
+		<label for="message">Your message:</label><br />
+		<textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
+	</div>
+	<input id="submit_button" type="submit" value="Send email" />
+</form>
 
 
 	</body>
