--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
              <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
              <form action="action_page.php" method="post">
  
-            ></p>
+            </p>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
         </div>
        
     </div>
-<p><centre>*******</centre></p>
+<p><centre>*********************</centre></p>
 <p> Please get in contact if you want to be featured on our blog!</p>
 <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
 	<div class="row">
