Close the brackets

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
              <p> Welcome to a website all about the first hand experince of women in science and how they have got where they are. </p>
              <form action="action_page.php" method="post">
  
-           
+           </form>
+           </div>
             </div>
           </div>
         </div>
