--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
  
            </form>
            </div>
+            ></p>
+
             </div>
           </div>
         </div>
@@ -99,7 +101,7 @@
         </div>
        
     </div>
-<p><centre>*********************</centre></p>
+<p><centre>*******</centre></p>
 <p> Please get in contact if you want to be featured on our blog!</p>
 <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
 	<div class="row">
