--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </p>
 
 <div>
-<img src="image.jpg" alt="Emma" style="width:304px;">
+<img src="Image.jpg" alt="Emma" style="width:304px;">
 
 		<h2> Emma's Story </h2>
 <p> Hey I am a Neuroscience undergraduate in my final year! As a field, Neuroscience is in its infancy and there is so much to discover.. I'm really keen to get more people, *ahemm particularly ladies* involved in this subject so that we can help to understand how people learn, think and function! Hope you like our first website!  </p>
